mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_unterminated_comment.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_unterminated_comment.mux`
error: Unterminated block comment
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_unterminated_comment.mux:2:1
   |
 2 | /* hello
   | ^
